--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,10 @@
     <string name="input_hours_error">At least one of the input hours should be non zero.</string>
     <string name="books">Books</string>
     <string name="pages_completed">Pages Completed :</string>
+    <string name="update_progress">UPDATE PROGRESS</string>
+    <string name="page_no">Page Number</string>
+    <string name="total_pages">Total Pages</string>
+    <string name="rev_completed">Revision Completed</string>
     <string name="copyright">COPYRIGHT &amp; DISCLAIMER NOTICE</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
