add custom book to existing course

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="sm">SM</string>
     <string name="login">Login</string>
     <string name="signup">Signup</string>
+    <string name="forgot_password">Forgot password?</string>
     <string name="not_a_member">Not on Study Tracker?</string>
     <string name="signup_here">Signup here</string>
     <string name="enter_email">Enter your email ID</string>
@@ -61,6 +62,9 @@
     <string name="page_no">Page Number</string>
     <string name="total_pages">Total Pages</string>
     <string name="rev_completed">Revision Completed</string>
+    <string name="book_title">Book Title</string>
+    <string name="no_pages">Number of pages</string>
+    <string name="author">Author</string>
     <string name="prof_info">PROFILE INFORMATION</string>
     <string name="name">Name</string>
     <string name="logout">LOGOUT</string>
@@ -84,5 +88,7 @@
     <string name="title_activity_course_details">Course Details</string>
     <string name="title_activity_course_settings">Course Settings</string>
     <string name="title_activity_course_update">Course Update</string>
+    <string name="title_activity_pwd_recovery">PwdRecoveryActivity</string>
+    <string name="title_activity_custom_book">Add Custom Book</string>
 
 </resources>
