Sprint 1 changes made according to suggestions on Nov 25

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,7 @@
     <string name="subscribed_courses">SUBSCRIBED COURSES</string>
     <string name="signup_failed">Sign-up failed</string>
     <string name="title_activity_bottom_bar">BottomBarActivity</string>
+    <string name="welcome">Welcome</string>
     <string name="subscribed_empty">
         StudyManager is now successfully installed.\n
         You are now one step closer in acheiving your goal.\n
@@ -53,30 +54,41 @@
     <string name="setting_saved">Successfully saved settings</string>
     <string name="change">Change</string>
     <string name="save">save</string>
+    <string name="course_settings">Course-Settings details</string>
+    <string name="reading_speed_on">Course settings has been caliberated based on your reading speed.</string>
+    <string name="reading_speed_off">Course settings has been caliberated based on a Target-Date.\n
+        Changing the settings to a reading speed will clear all of your previous settings.</string>
+    <string name="target_date_on">Course settings has been caliberated based on a Target-Date.</string>
+    <string name="target_date_off">Course settings has been caliberated based on your reading speed.\n
+        Changing the settings to a target date will clear all of your previous settings.</string>
     <string name="input_hours">INPUT HOURS</string>
     <string name="input_hours_text">Enter the number of hours you can spend studying on a regular
         basis for this course.
     </string>
     <string name="prep_time">PROFICIENCY LEVEL</string>
-    <string name="easy">Easy</string>
-    <string name="moderate">Moderate</string>
-    <string name="difficult">Difficult</string>
+    <string name="beginner">Beginner</string>
+    <string name="normal">Normal</string>
+    <string name="expert">Expert</string>
+    <string name="hoursperday_pre">Read</string>
+    <string name="hoursperday_post">pages per day to stay on track</string>
     <string name="plan_date">PLANNED COMPLETION DATE</string>
     <string name="m">M</string>
     <string name="t">T</string>
     <string name="w">W</string>
     <string name="f">F</string>
     <string name="s">S</string>
-    <string name="max_hours">*Maximum of 16 study hours per day</string>
+    <string name="max_hours">*Maximum of 12 study hours per day</string>
     <string name="input_hours_error">At least one of the input hours should be non zero.</string>
     <string name="books">Books</string>
     <string name="add_book">ADD BOOK</string>
+    <string name="pages_com">Pages Completed</string>
     <string name="pages_completed">Pages Completed :</string>
     <string name="update_progress">UPDATE PROGRESS</string>
     <string name="cant_delete">Cannot delete last book in course</string>
-    <string name="page_no">Page Number</string>
+    <string name="page_no_read">No of Pages Read</string>
     <string name="total_pages">Total Pages</string>
     <string name="rev_completed">Revision Completed</string>
+    <string name="completed">Completed</string>
     <string name="book_title">Book Title</string>
     <string name="no_pages">Number of pages</string>
     <string name="author">Author</string>
@@ -88,24 +100,19 @@
     <string name="copyright">COPYRIGHT &amp; DISCLAIMER NOTICE</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
-
-    <string name="copyright_text">
-        The Project Management Professional (PMP)® is the most important industry-recognized certification for project managers.\n
-        Offered by the Project Management Institute.
-    </string>
+    <string name="comma">,</string>
     <string name="tou">
-        PMI and PMBOK are trademarks of the Project Management Institute,
-        Inc. Rita Mulachy Exam Prep are treademarks of RMI Learning Solutions. RMI &amp; PMI has not
-        endorsed and did not participate in the development of this Application. RMI and PMI
-        does not sponsor this publication and makes no warranty, guarantee or representation,
-        expressed or implied as to the accuracy of the Application. Every attempt has been made by
-        &lt;company Name&gt; to ensure that the information presented in this Application is
-        accurate and can serve as preparation for the PMP certification exam. However, &lt;
-        Company Name&gt; acepts no legal responsibility for the content of the recommended books.
-        This Application should be used only as a tool to assist in preparation of the subscribed
-        courses. Following the "Plan" from this document does not guarantee that the reader will
-        pass the PMP Certification exam. No such guarantees or warranties are implied or expressed
-        by &lt;Company Name&gt;
+        PMI, PMP and PMBOK are trademarks of the Project Management Institute, Inc.\n
+        Rita Mulachy Exam Prep are trademarks of RMI Learning Solution\n
+        RMI &amp; PMI has not endorsed and did not participate in the development of this Application.
+        RMI and PMI does not sponsor this publication and makes no warranty,
+        guarantee or representation, expressed or implied as to the accuracy of the Application.
+        Every attempt has been made by BeckSoftware Ltd.,
+        to ensure that the information presented in this Application is accurate and can serve as preparation for the PMP certification exam.
+        However, BeckSofware Ltd., accepts no legal responsibility for the content of the recommended books.
+        This Application should be used only as a tool to assist in preparation of the subscribed Courses.
+        Following the “Plan” from this document does not guarantee that the reader will pass the PMP Certification exam.
+        No such guarantees or warranties are implied or expressed by BeckSoftware Ltd.
     </string>
     <string name="more_info"><a href="https://www.pmi.org/certifications/types/project-management-pmp">Get more info</a></string>
     <string name="title_activity_course_details">Course Details</string>
